--- a/Abstractions/MCPhappey.Tools/MCPhappey.Tools.csproj
+++ b/Abstractions/MCPhappey.Tools/MCPhappey.Tools.csproj
@@ -17,13 +17,13 @@
     <PackageReference Include="AngleSharp" Version="1.4.1-beta.506" />
     <PackageReference Include="Anthropic.SDK" Version="5.8.0" />
     <PackageReference Include="Bogus" Version="35.6.5" />
-    <PackageReference Include="CoordinateSharp" Version="3.3.2.1" />
+    <PackageReference Include="CoordinateSharp" Version="3.4.1.1" />
     <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.4.1" />
-    <PackageReference Include="GEmojiSharp" Version="4.0.0" />
+    <PackageReference Include="GEmojiSharp" Version="4.1.0" />
     <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.2.1" />
     <PackageReference Include="Humanizer" Version="3.0.1" />
-    <PackageReference Include="libphonenumber-csharp" Version="9.0.21" />
+    <PackageReference Include="libphonenumber-csharp" Version="9.0.22" />
     <PackageReference Include="Markdig" Version="0.44.0" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.11" />
     <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.47.0" />
@@ -40,9 +40,9 @@
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
     <PackageReference Include="Plotly.NET" Version="6.0.0-preview.1" />
     <PackageReference Include="Plotly.NET.CSharp" Version="0.14.0-preview.1" />
-    <PackageReference Include="QuestPDF" Version="2025.12.1" />
-    <PackageReference Include="QuestPDF.Markdown" Version="1.45.0" />
-    <PackageReference Include="Raffinert.FuzzySharp" Version="3.0.6" />
+    <PackageReference Include="QuestPDF" Version="2025.12.3.1-alpha2" />
+    <PackageReference Include="QuestPDF.Markdown" Version="1.46.0" />
+    <PackageReference Include="Raffinert.FuzzySharp" Version="3.0.7" />
     <PackageReference Include="RESTCountries.NET" Version="3.6.0" />
     <PackageReference Include="SharpGLTF.Core" Version="1.0.6" />
     <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.6" />
