--- a/Abstractions/MCPhappey.Auth/MCPhappey.Auth.csproj
+++ b/Abstractions/MCPhappey.Auth/MCPhappey.Auth.csproj
@@ -13,7 +13,7 @@
 
 	<ItemGroup>
 	<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.11" />
-	<PackageReference Include="Microsoft.Identity.Client" Version="4.82.0-preview-2" />
+	<PackageReference Include="Microsoft.Identity.Client" Version="4.82.0" />
 	<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0" />
 	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
 	</ItemGroup>
