--- a/Abstractions/MCPhappey.Tools/MCPhappey.Tools.csproj
+++ b/Abstractions/MCPhappey.Tools/MCPhappey.Tools.csproj
@@ -26,7 +26,7 @@
     <PackageReference Include="libphonenumber-csharp" Version="9.0.23" />
     <PackageReference Include="Markdig" Version="0.44.0" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.11" />
-    <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.47.0" />
+    <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.48.1" />
     <PackageReference Include="Microsoft.PowerBI.Api" Version="4.22.0" />
     <PackageReference Include="Mscc.GenerativeAI" Version="2.9.8" />
     <PackageReference Include="NAudio" Version="2.2.1" />
@@ -40,7 +40,7 @@
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
     <PackageReference Include="Plotly.NET" Version="6.0.0-preview.1" />
     <PackageReference Include="Plotly.NET.CSharp" Version="0.14.0-preview.1" />
-    <PackageReference Include="QuestPDF" Version="2025.12.3.1-alpha2" />
+    <PackageReference Include="QuestPDF" Version="2025.12.4" />
     <PackageReference Include="QuestPDF.Markdown" Version="1.47.0" />
     <PackageReference Include="Raffinert.FuzzySharp" Version="3.0.8" />
     <PackageReference Include="RESTCountries.NET" Version="3.6.0" />
