Added Picsart, Morpheus, Monica, Pinecone, Ideogram, OpenCode, Straico, Nextbit, ExtendAI, RelaxAI, CAMB.AI, Exa-Websets, Featherless & ArceeAI MCPs

--- a/Samples/MCPhappey.AzureAuth/appsettings.json
+++ b/Samples/MCPhappey.AzureAuth/appsettings.json
@@ -28,6 +28,9 @@
       "YourHeader": "HeaderValue"
     }
   },
+  "Picsart": {
+    "ApiKey": "<your-picsart-api-key>"
+  },
   "OAuth": {
     "TenantId": "<your-tenant-id>",
     "ClientId": "<your-client-id>",
